<resources>

    <string name="app_name">Lab Assignment 2</string>

    <string name="input_hint">Input will be shown here…</string>

    <string name="result_hint">Result will be shown here…</string>

    <string name="clr">C</string>
    <string name="sqrt">√</string>
    <string name="sqr">x²</string>
    <string name="div">÷</string>

    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="mul">×</string>

    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="min">–</string>

    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="pls">+</string>

    <string name="back">⌫</string>
    <string name="num0">0</string>
    <string name="dot">.</string>
    <string name="eq">=</string>

</resources>