<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/input_hint"
            android:textColorHint="#00838F"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/result_hint"
            android:textColorHint="#78909C"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/row0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_clr"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/op_btn_style"
                android:text="@string/clr"
                android:textColor="#E6FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="#03A9F4"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btn_sqrt"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/op_btn_style"
                android:text="@string/sqrt"
                android:textAllCaps="false"
                android:textColor="#E6FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="#03A9F4"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btn_sqr"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/op_btn_style"
                android:text="@string/sqr"
                android:textAllCaps="false"
                android:textColor="#E6FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="#03A9F4"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btn_div"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/op_btn_style"
                android:text="@string/div"
                android:textColor="#E6FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="#03A9F4"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_num7"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/num_btn_style"
                android:text="@string/num7"
                android:textColor="#03A9F4"
                android:textSize="24sp"
                app:backgroundTint="#03A9F4"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btn_num8"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/num_btn_style"
                android:text="@string/num8"
                android:textColor="#03A9F4"
                android:textSize="24sp"
                app:backgroundTint="#03A9F4"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btn_num9"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/num_btn_style"
                android:text="@string/num9"
                android:textColor="#03A9F4"
                android:textSize="24sp"
                app:backgroundTint="#03A9F4"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btn_mul"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/op_btn_style"
                android:text="@string/mul"
                android:textColor="#E6FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="#03A9F4"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_num4"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/num_btn_style"
                android:text="@string/num4"
                android:textColor="#03A9F4"
                android:textSize="24sp"
                app:backgroundTint="#03A9F4"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btn_num5"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/num_btn_style"
                android:text="@string/num5"
                android:textColor="#03A9F4"
                android:textSize="24sp"
                app:backgroundTint="#03A9F4"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btn_num6"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/num_btn_style"
                android:text="@string/num6"
                android:textColor="#03A9F4"
                android:textSize="24sp"
                app:backgroundTint="#03A9F4"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btn_min"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/op_btn_style"
                android:text="@string/min"
                android:textColor="#E6FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="#03A9F4"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_num1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/num_btn_style"
                android:text="@string/num1"
                android:textColor="#03A9F4"
                android:textSize="24sp"
                app:backgroundTint="#03A9F4"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btn_num2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/num_btn_style"
                android:text="@string/num2"
                android:textColor="#03A9F4"
                android:textSize="24sp"
                app:backgroundTint="#03A9F4"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btn_num3"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/num_btn_style"
                android:text="@string/num3"
                android:textColor="#03A9F4"
                android:textSize="24sp"
                app:backgroundTint="#03A9F4"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btn_pls"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/op_btn_style"
                android:text="@string/pls"
                android:textColor="#E6FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="#03A9F4"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_back"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/op_btn_style"
                android:text="@string/back"
                android:textColor="#E6FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="#03A9F4"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btn_num0"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/num_btn_style"
                android:text="@string/num0"
                android:textColor="#03A9F4"
                android:textSize="24sp"
                app:backgroundTint="#03A9F4"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btn_dot"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/op_btn_style"
                android:text="@string/dot"
                android:textColor="#E6FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="#03A9F4"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btn_eq"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/op_btn_style"
                android:text="@string/eq"
                android:textColor="#E6FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="#03A9F4"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>